tests/ui/runtime/gc/check_finalizers.stderr
error: `ShouldFail(Cell::new(123))` has a drop method which cannot be safely finalized.
  --> $DIR/check_finalizers.rs:71:13
   |
LL |         self.0.replace(456);
   |         ------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(ShouldFail(Cell::new(123)));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send` + `Sync`.

error: `gcfields` has a drop method which cannot be safely finalized.
  --> $DIR/check_finalizers.rs:75:13
   |
LL |         println!("Boom {}", self.0);
   |                             ------
   |                             |
   |                             caused by the expression here in `fn drop(&mut)` because
   |                             it uses another `Gc` type.
...
LL |     Gc::new(gcfields);
   |     --------^^^^^^^^- Finalizers cannot safely dereference other `Gc`s, because they might have already been finalised.

error: `self_call` has a drop method which cannot be safely finalized.
  --> $DIR/check_finalizers.rs:79:13
   |
LL |     Gc::new(self_call);
   |             ^^^^^^^^^ contains a function call which may be unsafe.

error: `not_threadsafe` has a drop method which cannot be safely finalized.
  --> $DIR/check_finalizers.rs:83:13
   |
LL |         println!("Boom {}", self.0.0);
   |                             --------
   |                             |
   |                             caused by the expression in `fn drop(&mut)` here because
   |                             it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(not_threadsafe);
   |             ^^^^^^^^^^^^^^
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send` + `Sync`.

error: aborting due to 4 previous errors

